[tool.poetry]
name = "repl_python3_memlearn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
seaborn = "^0.11.2"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
plotly = "^5.8.2"
dash = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
